# t4c-168-vs2022

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CREDITS.md  README.md
CLIENT168_RC14h_OK/1.68RC14h/Client/Debug/: T4C.exp  english.elng  englishgui.elng
CLIENT168_RC14h_OK/1.68RC14h/Client/Debug/Game Files/: SNMCI._  V2ColorI.dpd  V2Data25.dda  V2DataI.did  lightcerberuspod.raw  lightcerberuspodanimated.raw  lightcerberuspodanimatedl.raw  lightcerberuspodl.raw  lightchandelle.raw  lightchandellel.raw  lightlanternewood01.raw  lightlanternewood01l.raw  lightlanternewood02.raw  lightlanternewood02l.raw  lighttorch.raw  lighttorchchandelle2.raw  lighttorchchandelle2l.raw  lighttorchl.raw  lighttorchlanterne1.raw  lighttorchlanterne1l.raw  lighttorchotherplayer.raw  lighttorchotherplayerl.raw  lighttorchplayer.raw  lighttorchplayerl.raw  lighttorchpoutre.raw  lighttorchpoutrel.raw  map.id1  map.id2  v2_cavernmap.map1  v2_cavernmap.map2  v2_cavernmap.mapa  v2_cavernmap.mapl  v2_cavernmap.mapm  v2_cavernmap.mapx  v2_dungeonmap.map1  v2_dungeonmap.map2  v2_dungeonmap.mapa  v2_dungeonmap.mapl  v2_dungeonmap.mapm  v2_dungeonmap.mapx  (+38 more)
CLIENT168_RC14h_OK/1.68RC14h/Client/Directx9SDK/Include/: DWrite.h  DXGI.h
CLIENT168_RC14h_OK/1.68RC14h/Client/T4C Client/: ComPacketHeader.h  CommCenter.h  Getopt.cpp  Lock.h  Random.cpp  T4C Client.vcxproj  force_includes.h
CLIENT168_RC14h_OK/1.68RC14h/Client/T4C Client/Debug/: Resources.res  T4C.exe.recipe  WebPatch.tlh  WebPatch.tli  pch.sbr
CLIENT168_RC14h_OK/1.68RC14h/Client/T4C Client/UDP/: Mutex.cpp  Mutex.h  Semaphore.cpp  Semaphore.h
CLIENT168_RC14h_OK/1.68RC14h/Client/T4CLauncher/: StdAfx.h  force_dxgi.h
CLIENT168_RC14h_OK/1.68RC14h/Client/T4CLauncher/Debug/: T4CLauncher.dll.recipe  T4CLauncher.exp  T4CLauncher.res
CLIENT168_RC14h_OK/1.68RC14h/CryptMestoph/: crypt.cpp  crypt.h
cmake/: TncGraphical.cmake
scripts/: generate_t4c_inv_icon_map.py
src/: main.cpp
src/audio/: T4CGameMusic.cpp  T4CGameMusic.h
src/game/: GameWorldScreen.cpp  GameWorldScreen.h  TncDataPaths.cpp  TncDataPaths.h
src/gui/: CharacterCreateScreen.cpp  CharacterSelectScreen.cpp  CharacterSelectScreen.h  LauncherChrome.cpp  LauncherChrome.h  LoginScreen.cpp  LoginScreen.h  T4CCharacterQuestionnaire.cpp  T4CInvItemIconMap.gen.cpp  T4CInvItemIcons.cpp  T4CInvItemIcons.h  T4CScrollingBanner.cpp  T4CScrollingBanner.h  T4CUiFont.cpp  T4CUiFont.h  WorldBackpackPanel.cpp  WorldBackpackPanel.h  WorldSideMenu.cpp  WorldSideMenu.h
src/network/: CommCenter.cpp  CommCenterLinuxSStubs.h  CryptStubLinux.cpp  CryptStubLinux.h  IOCPCompat.cpp  SocketCompatibility.h  T4CLinuxCommPort.cpp  T4CLinuxCommPort.h  T4CLoginSession.cpp  T4CLoginSession.h  T4CPlayerInventory.h
